# triage-agent

./: .gitignore  LICENSE  README.md
agent/: README.md
demo/: README.md  script.md
demo/scenarios/: bad-deploy.md
scripts/: bootstrap.ps1  deploy-server.ps1  deploy-web.ps1
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
server/app/: __init__.py  agent.py  config.py  dynatrace_mock.py  logging.py  main.py  mcp_client.py  models.py  prompts.py  store.py
server/app/routes/: __init__.py  approvals.py  demo.py  health.py  incidents.py  webhooks.py
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/incidents/[id]/: page.tsx
web/components/: approval-controls.tsx  header.tsx  incident-detail.tsx  incident-list.tsx  live-incident.tsx  plan-card.tsx  postmortem-view.tsx  seed-demo-button.tsx  status-badge.tsx  timeline.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx
web/lib/: api.ts  types.ts  utils.ts
